--- a/packages/lit-analyzer/package.json
+++ b/packages/lit-analyzer/package.json
@@ -43,7 +43,7 @@
 		"chalk": "^2.4.2",
 		"didyoumean2": "4.1.0",
 		"fast-glob": "^2.2.6",
-		"parse5": "5.1.0",
+		"parse5": "^6.0.1",
 		"ts-simple-type": "~1.0.5",
 		"vscode-css-languageservice": "4.3.0",
 		"vscode-html-languageservice": "3.1.0",
@@ -55,6 +55,7 @@
 		"@rollup/plugin-node-resolve": "^8.1.0",
 		"@rollup/plugin-replace": "^2.3.3",
 		"@types/node": "^14.0.13",
+		"@types/parse5": "^5.0.3",
 		"@wessberg/rollup-plugin-ts": "^1.2.25",
 		"ava": "^3.8.2",
 		"cross-env": "^7.0.2",
